<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
      <variable
          name="verifyOtpModel"
          type="com.utico.dawntodusk.delivery.viewmodel.VerifyOtpViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/card_background_light_green">

        <RelativeLayout
            android:id="@+id/rltImage"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@drawable/login_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/edit_profile_imageview"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/dawntodusklogo" />
            <LinearLayout
                android:id="@+id/lnrTextRow"
                android:layout_below="@+id/edit_profile_imageview"
                android:layout_width="match_parent"
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/otp_verify"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>


        <TextView
            android:id="@+id/tv_otp_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tv_label_verify_otp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rltImage" />

        <TextView
            android:id="@+id/tv_mobile_number_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:text="@string/please_type_the_verification_code_sent_to_n_9xxxxxxx19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_otp_verify" />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otp_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            app:bar_active_color="@color/white"
            app:bar_enabled="true"
            app:bar_error_color="@color/red"
            app:bar_height="1.5dp"
            app:bar_inactive_color="@color/white"
            app:bar_margin_bottom="0dp"
            app:bar_margin_left="2dp"
            app:bar_margin_right="2dp"
            app:bar_success_color="@color/green"
            app:box_margin="0dp"
            app:height="40dp"
            app:hide_otp="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile_number_description"
            app:length="6"
            app:otp=""
            app:otp_text_size="20dp"
            app:width="40dp" />

        <Button
            android:id="@+id/buttonVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/green"
            android:text="@string/verify_otp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

