<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.DeliveryScreenFragment"
    android:background="@color/light_grey">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lnrTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_black_arrow_back"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/purple_700"
            android:textSize="24sp"
            android:text="@string/delivery_summary" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/teal_200"
            android:text="3Items"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="10dp"
        app:cardMaxElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnrTitle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/lnrNameRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name_of_client"
                    android:textColor="@color/purple_700"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvOrderNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="Order No: 186"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/teal_200" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnrClientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/lnrNameRow">

                <TextView
                    android:id="@+id/tvCallToCustomer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/press_here_call_to_customer"
                    android:textColor="@color/green"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_green_phone"
                    android:background="@drawable/backgroung_rectangle_grey"
                    android:padding="4dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lnrClientName"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery_address"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_green_home"
                        android:text="1st main subhanna garden Vijayanagar Bengaluru 54001"
                        />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageViewGmap"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:background="@drawable/googlemap" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewSummary"
        tools:listitem="@layout/item_row_delivery"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView"
            app:cardMaxElevation="10dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvTotalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_amount"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvInclusive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTotalAmount"
                    android:text="@string/inclusive_of_all_taxes"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:alpha="0.5"/>
                <View
                    android:id="@+id/viewLine"
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:background="@color/black"
                    android:layout_marginLeft="40dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tvInclusive"/>

                <TextView
                    android:id="@+id/tvTotalPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/viewLine"
                    android:text="AED.300"
                    android:textColor="@color/green"
                    android:textSize="18sp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

<!--
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewManagerPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewTotal"
        app:cardMaxElevation="10dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvCalltoManagerDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/press_here_to_call_manage_for_any_problem"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <View
                android:id="@+id/viewLineCallManager"
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:background="@color/black"
                android:layout_marginLeft="40dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tvCalltoManagerDesc"/>

            <TextView
                android:id="@+id/tvcall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:layout_toRightOf="@+id/viewLineCallManager"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:text="AED.30.49"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
-->

        <TextView
            android:id="@+id/tvCallToManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:text="@string/press_here_call_to_manager"
            android:drawableLeft="@drawable/ic_green_phone"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonConfirm"
            app:layout_constraintTop_toBottomOf="@+id/cardViewTotal"
            />
    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCallToManager"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
